--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -32,6 +33,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "react-toastify": "^11.0.5"
   }
 }
