--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.9",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
@@ -25,19 +26,21 @@
     "@types/leaflet": "^1.9.17",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.17",
+    "@types/react-map-gl": "^6.1.7",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "bootstrap-icons": "^1.11.3",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "mapbox-gl": "^3.11.0",
     "postcss": "^8.4.38",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^5.2.0",
-    "bootstrap-icons": "^1.11.3"
+    "vite": "^5.2.0"
   }
 }
