--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "react-easy-crop": "^5.4.1"
   }
 }
