--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,11 +38,12 @@
     "globals": "^15.15.0",
     "mapbox-gl": "^3.11.0",
     "postcss": "^8.4.38",
+    "react-easy-crop": "^5.4.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^5.2.0",
-    "react-easy-crop": "^5.4.1"
+    "date-fns": "^4.1.0"
   }
 }
